--- a/PlayerServer/PlayerServer.csproj
+++ b/PlayerServer/PlayerServer.csproj
@@ -1,10 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
-        <ApplicationManifest>app.manifest</ApplicationManifest>
+        <LangVersion>latest</LangVersion>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     </PropertyGroup>
 
@@ -13,24 +11,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.2.0-rc2"/>
-        <PackageReference Include="Avalonia.Desktop" Version="11.2.0-rc1"/>
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.0-rc1"/>
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.0-rc1"/>
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.0-rc1"/>
+        <PackageReference Include="Avalonia"/>
+        <PackageReference Include="Avalonia.Themes.Fluent"/>
+        <PackageReference Include="Avalonia.Fonts.Inter"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0-rc1"/>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2"/>
-        <PackageReference Include="FluentAvaloniaUI" Version="2.1.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Compile Update="Views\ServerView.axaml.cs">
-            <DependentUpon>ServerView.axaml</DependentUpon>
-        </Compile>
-        <Compile Update="Views\SettingView.axaml.cs">
-            <DependentUpon>ServerSettingView.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
+        <PackageReference Include="Avalonia.Diagnostics">
+            <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
+            <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="CommunityToolkit.Mvvm"/>
+        <PackageReference Include="FluentAvaloniaUI"/>
+        <PackageReference Include="Quick.AvaloniaFonts.SourceHanSansCN" />
     </ItemGroup>
 </Project>
